--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PokeAPI</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 
 <body>
     <h1>PokeAPI</h1>
-    <div class="wrapper">
+    <div class="header">
         <p>
             Let's learn about our Pokemon!
         </p>
@@ -25,13 +28,17 @@
 
         </form>
     </div>
-    <div class="results">
-        <ul>
+    <div class="row">
+        <div class="results col">
+            <ul>
 
 
-        </ul>
+            </ul>
+        </div>
+        <div class="pic col">
+            <img src="" alt="" class="image">
+        </div>
     </div>
-
 
     <script src="pokeAPI.js"></script>
 </body>
